--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,17 +1,22 @@
+{# base.html.twig #}
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-        {% block stylesheets %}
-        {% endblock %}
+<html lang="pl">
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}My Website{% endblock %}</title>
+    <!-- Include Tailwind CSS styles -->
+    <link href="{{ asset('build/app.css') }}" rel="stylesheet">
+</head>
+<body class="bg-gray-100">
+{% include 'navbar.html.twig' %}
 
-        {% block javascripts %}
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+<div class="container mx-auto px-4">
+    {% block body %}{% endblock %}
+</div>
+
+{% include 'footer.html.twig' %}
+
+<!-- Include Tailwind CSS script (if needed) -->
+<script src="{{ asset('build/app.js') }}"></script>
+</body>
 </html>
