--- a/templates/main/footer.html.twig
+++ b/templates/main/footer.html.twig
@@ -1,16 +1,16 @@
 {# footer.html.twig #}
 
-<footer class="footer mt-auto py-3 bg-light">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <p>&copy; 2024 My Website. All Rights Reserved.</p>
+<footer class="bg-gray-200">
+    <div class="container mx-auto px-4 py-6">
+        <div class="flex flex-wrap justify-between items-center">
+            <div class="w-full md:w-1/2 text-center md:text-left mb-4 md:mb-0">
+                <p class="text-gray-600">&copy; 2024 My Website. All Rights Reserved.</p>
             </div>
-            <div class="col-md-6 text-md-end">
+            <div class="w-full md:w-1/2 text-center md:text-right">
                 <ul class="list-inline">
-                    <li class="list-inline-item"><a href="#">Polityka prywatności</a></li>
-                    <li class="list-inline-item"><a href="#">Warunki użytkowania</a></li>
-                    <li class="list-inline-item"><a href="#">Mapa strony</a></li>
+                    <li class="list-inline-item"><a href="#" class="text-gray-600 hover:text-gray-800">Polityka prywatności</a></li>
+                    <li class="list-inline-item"><a href="#" class="text-gray-600 hover:text-gray-800">Warunki użytkowania</a></li>
+                    <li class="list-inline-item"><a href="#" class="text-gray-600 hover:text-gray-800">Mapa strony</a></li>
                 </ul>
             </div>
         </div>
