--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -13,12 +13,15 @@
 
 {% block body %}
     <div class="example-wrapper">
-        <h1>Hello {{ controller_name }}! ✅</h1>
+        <h1>Hello I am a photographer :|</h1>
 
-        This friendly message is coming from:
-        <ul>
-            <li>Your controller at <code>C:/Users/mateu/PhpstormProjects/PhotographyPortfolio/src/Controller/MainController.php</code></li>
-            <li>Your template at <code>C:/Users/mateu/PhpstormProjects/PhotographyPortfolio/templates/main/index.html.twig</code></li>
-        </ul>
+        This my portfolio :
+
+        <div class="flex flex-wrap space-x-4">
+            <img src="{{ asset('images/ostoya_fire.jpeg') }}" alt="Ostoya Black Fire Image">
+            <img src="{{ asset('images/bombay_sapphire.jpeg') }}" alt="Bombay Sapphire Image">
+            <img src="{{ asset('images/nike_jordan_red.jpeg') }}" alt="Nike Jordan Shoe Image">
+        </div>
+
     </div>
 {% endblock %}
