--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -1,7 +1,8 @@
-{# index.html.twig #}
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello MainController!{% endblock %}
+{% block title %}Portfolio{% endblock %}
+
+{% set active = 'portfolio' %}
 
 {% block stylesheets %}
     {{ parent() }}
@@ -17,10 +18,16 @@
 
         This my portfolio :
 
-        <div class="flex flex-wrap space-x-4">
-            <img src="{{ asset('images/ostoya_fire.jpeg') }}" alt="Ostoya Black Fire Image">
-            <img src="{{ asset('images/bombay_sapphire.jpeg') }}" alt="Bombay Sapphire Image">
-            <img src="{{ asset('images/nike_jordan_red.jpeg') }}" alt="Nike Jordan Shoe Image">
+        <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
+            <div class="grid gap-4">
+                <img class="h-auto max-w-full rounded-lg" src="{{ asset('images/ostoya_fire.jpeg') }}" alt="Ostoya Black Fire Image">
+            </div>
+            <div class="grid gap-4">
+                <img src="{{ asset('images/bombay_sapphire.jpeg') }}" alt="Bombay Sapphire Image">
+            </div>
+            <div class="grid gap-4">
+                <img class="h-auto max-w-full rounded-lg" src="{{ asset('images/nike_jordan_red.jpeg') }}" alt="Nike Jordan Shoe Image">
+            </div>
         </div>
 
     </div>
