--- a/templates/main/navbar.html.twig
+++ b/templates/main/navbar.html.twig
@@ -1,17 +1,14 @@
-<a href="#">
-    <img class="h-[42px]" src="{{ asset('images/starshop-logo.png') }}" alt="starshop logo">
+<a href="#" class="text-xl font-bold">
+    <h1>Szyfotomon</h1>
 </a>
-<nav class="flex space-x-4 font-semibold">
-    <a class="hover:text-amber-400 pt-2" href="#">
-        Home
+<nav class="w-full flex items-center justify-center mt-4 md:mt-0 space-x-2">
+    <a class="block md:inline-block px-4 py-2 {% if active == 'portfolio' %}underline{% endif %} hover:text-amber-400" href="{{ path('app_main') }}">
+        Portfolio
     </a>
-    <a class="hover:text-amber-400  pt-2" href="#">
-        About
+    <a class="block md:inline-block px-4 py-2 {% if active == 'about' %}underline{% endif %} hover:text-amber-400" href="#">
+        About me
     </a>
-    <a class="hover:text-amber-400 pt-2" href="#">
+    <a class="block md:inline-block px-4 py-2 {% if active == 'contact' %}underline{% endif %} hover:text-amber-400" href="#">
         Contact
-    </a>
-    <a class="rounded-[60px] py-2 px-5 bg-white/10 hover:bg-white/20" href="#">
-        Get Started
     </a>
 </nav>
