--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -21,7 +21,7 @@
         <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
             {% for photo in photos %}
                 <div class="grid gap-4">
-                <img src="{{ asset('images/' ~ photo.fileName) }}" alt="{{ photo.fileName }} load error">
+                <img src="{{ asset('images/' ~ photo) }}" alt="{{ photo }} load error">
                 </div>
             {% endfor %}
         </div>
