--- a/templates/main/_footer.html.twig
+++ b/templates/main/_footer.html.twig
@@ -16,7 +16,7 @@
                         <a href="#" class="text-gray-400 hover:text-amber-400">Mapa strony</a>
                     </li>
                     <li>
-                        <a href="#" class="text-gray-400 hover:text-amber-400">Login</a>
+                        <a href="{{ path('app_login') }}" class="text-gray-400 hover:text-amber-400">Login</a>
                     </li>
                 </ul>
             </div>
