--- a/templates/main/navbar.html.twig
+++ b/templates/main/navbar.html.twig
@@ -1,5 +1,5 @@
 <a href="#" class="text-xl font-bold">
-    <h1>Szyfotomon</h1>
+    <h1>Logo</h1>
 </a>
 <nav class="w-full flex items-center justify-center mt-4 md:mt-0 space-x-2">
     <a class="block md:inline-block px-4 py-2 {% if active == 'portfolio' %}underline{% endif %} hover:text-amber-400" href="{{ path('app_main') }}">
