add lorem ipsum text

--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -14,9 +14,9 @@
 
 {% block body %}
     <div class="example-wrapper">
-        <h1>Hello I am a photographer :|</h1>
+        <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h1>
 
-        This my portfolio :
+        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</span>
 
         <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
             {% for photo in photos %}
