update navbar styles

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,7 @@
 <body class="text-black" style="background: white;">
 <div class="flex flex-col justify-between min-h-screen relative">
     <div>
-        <header class="h-[114px] shrink-0 flex flex-col sm:flex-row items-center sm:justify-between py-4 sm:py-0 px-6 border-b border-white/20 shadow-md">
+        <header class="h-20 shrink-0 flex flex-col sm:flex-row items-center sm:justify-between py-4 sm:py-0 px-6">
         {% include 'main/navbar.html.twig' %}
         </header>
         {% block body %}{% endblock %}
