--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -5,26 +5,28 @@
 {% set active = 'portfolio' %}
 
 {% block stylesheets %}
-    {{ parent() }}
-    <style>
-        .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-        .example-wrapper code { background: white; padding: 2px 6px; }
-    </style>
+  {{ parent() }}
 {% endblock %}
 
 {% block body %}
-    <div class="example-wrapper">
-        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
-
-        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</span>
-
-        <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
-            {% for photo in photos %}
-                <div class="grid gap-4">
-                <img src="{{ asset('images/' ~ photo.fileName) }}" alt="{{ photo.fileName }} load error">
-                </div>
-            {% endfor %}
+  <div class="container mx-auto p-6 min-h-screen">
+    <div class="flex justify-between items-start p-6">
+      <div class="sticky top-1/2 transform -translate-y-1/2 w-1/3 p-6">
+        <div>
+          <h1 class="text-4xl mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit</h1>
+          <p class="text-lg">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
         </div>
+      </div>
 
+      <div class="flex-1 ml-6">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+          {% for photo in photos %}
+            <div class="w-full">
+              <img src="{{ asset('images/' ~ photo.fileName) }}" alt="{{ photo.fileName }} load error" class="w-full h-auto object-cover">
+            </div>
+          {% endfor %}
+        </div>
+      </div>
     </div>
+  </div>
 {% endblock %}
