--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -10,19 +10,19 @@
 
 {% block body %}
   <div class="container mx-auto p-6 min-h-screen">
-    <div class="flex justify-between items-start p-6">
-      <div class="sticky top-1/2 transform -translate-y-1/2 w-1/3 p-6">
-        <div>
+    <div class="flex flex-col md:flex-row items-start p-6">
+      <div class="md:w-1/3 md:sticky md:top-1/2 md:transform md:-translate-y-1/2 p-6">
+        <div class="mb-6 md:mb-0">
           <h1 class="text-4xl mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit</h1>
           <p class="text-lg">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
         </div>
       </div>
 
-      <div class="flex-1 ml-6">
-        <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
+      <div class="flex-1 mt-6 md:mt-0">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
           {% for photo in photos %}
-            <div class="grid gap-4">
-              <img src="{{ asset('images/' ~ photo.fileName) }}" alt="{{ photo.fileName }} load error" class="h-full w-full rounded-lg">
+            <div class="w-full">
+              <img src="{{ asset('images/' ~ photo.fileName) }}" alt="{{ photo.fileName }} load error" class="w-full h-full rounded-lg">
             </div>
           {% endfor %}
         </div>
