--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -5,3 +5,27 @@
 body {
     background-color: skyblue;
 }
+
+.active-link {
+    position: relative;
+    text-decoration: none;
+    color: #000;
+}
+
+.active-link::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -2px;
+    width: 100%;
+    height: 2px;
+    background-color: #000;
+    transition: all 0.3s ease;
+    transform: scaleX(0);
+    transform-origin: bottom left;
+}
+
+.active-link:hover::after,
+.active-link.active::after {
+    transform: scaleX(1);
+}
