--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,11 +15,11 @@
 <div class="flex flex-col justify-between min-h-screen relative">
     <div>
         <header class="h-20 shrink-0 flex flex-col sm:flex-row items-center sm:justify-between py-4 sm:py-0 px-6">
-        {% include 'main/navbar.html.twig' %}
+        {% include 'main/_navbar.html.twig' %}
         </header>
         {% block body %}{% endblock %}
     </div>
-    {% include 'main/footer.html.twig' %}
+    {% include 'main/_footer.html.twig' %}
 </div>
 </body>
 </html>
