--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -1,8 +1,8 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Portfolio{% endblock %}
+{% block title %}Strona główna{% endblock %}
 
-{% set active = 'portfolio' %}
+{% set active = 'main' %}
 
 {% block body %}
   <div class="container mx-auto p-6 min-h-screen">
