--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -5,7 +5,7 @@
     <a class="active-link underline-animation block md:inline-block px-4 py-2 {% if active == 'portfolio' %}active{% endif %}" href="{{ path('portfolio') }}">
         Portfolio
     </a>
-    <a class="active-link underline-animation block md:inline-block px-4 py-2 {% if active == 'about' %}active{% endif %}" href="#">
+    <a class="active-link underline-animation block md:inline-block px-4 py-2 {% if active == 'about' %}active{% endif %}" href="{{ path('about')}}">
         O mnie
     </a>
     <a class="active-link underline-animation block md:inline-block px-4 py-2 {% if active == 'contact' %}active{% endif %}" href="#">
