--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -18,7 +18,7 @@
         <div class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
           {% for photo in photos %}
             <div class="w-full">
-              <img src="{{ asset('images/' ~ photo.fileName) }}" alt="{{ photo.fileName }} load error" class="w-full h-full rounded-lg">
+              <img loading="lazy" src="{{ asset('images/' ~ photo.fileName) }}" alt="{{ photo.fileName }} load error" class="w-full h-full rounded-lg">
             </div>
           {% endfor %}
         </div>
