--- a/templates/_footer.html.twig
+++ b/templates/_footer.html.twig
@@ -5,18 +5,18 @@
                 <p class="text-gray-400">&copy; 2024 My Website. All Rights Reserved.</p>
             </div>
             <div class="w-full md:w-1/2 text-center md:text-right">
-                <ul class="flex space-x-4 font-semibold">
+                <ul class="flex space-x-4">
                     <li>
-                        <a href="#" class="text-gray-400 hover:text-amber-400">Polityka prywatności</a>
+                        <a href="#" class="hover:text-gray-400">Polityka prywatności</a>
                     </li>
                     <li>
-                        <a href="#" class="text-gray-400 hover:text-amber-400">Warunki użytkowania</a>
+                        <a href="#" class="hover:text-gray-400">Warunki użytkowania</a>
                     </li>
                     <li>
-                        <a href="#" class="text-gray-400 hover:text-amber-400">Mapa strony</a>
+                        <a href="#" class="hover:text-gray-400">Mapa strony</a>
                     </li>
                     <li>
-                        <a href="{{ path('app_login') }}" class="text-gray-400 hover:text-amber-400">Login</a>
+                        <a href="{{ path('app_login') }}" class="hover:text-gray-400">Login</a>
                     </li>
                 </ul>
             </div>
