--- a/templates/main/contact.html.twig
+++ b/templates/main/contact.html.twig
@@ -10,7 +10,7 @@
             <div class="md:w-1/2 pr-6 mb-6 md:mb-0">
                 <div class="p-4 rounded-lg">
                     <div class="relative mb-4 flex justify-center">
-                        <img src="{{ asset('images/nike_jordan_red.jpeg') }}" alt="Zdjęcie kontaktowe" class="rounded-lg" height="300" width="150">
+                        <img src="{{ asset('images/nike_jordan_red_cropped.webp') }}" alt="Zdjęcie kontaktowe" class="rounded-lg" height="300" width="150">
                     </div>
                     <h2 class="text-xl font-semibold mb-2 text-center">Dane kontaktowe</h2>
                     <p class="text-center"><strong>Email:</strong> example@email.com</p>
