--- a/templates/main/about.html.twig
+++ b/templates/main/about.html.twig
@@ -8,7 +8,7 @@
     <div class="container mx-auto p-6 min-h-screen flex justify-center items-center">
         <div class="flex flex-col md:flex-row items-start max-w-screen-md">
             <div class="md:w-1/2 md:p-6">
-                <img src="{{ asset('images/nike_jordan_red.jpeg') }}" alt="Your Photo" class="w-full h-full md:max-w-sm rounded-lg mx-auto md:mx-0">
+                <img src="{{ asset('images/nike_jordan_red_cropped.webp') }}" alt="Your Photo" class="w-full h-full md:max-w-sm rounded-lg mx-auto md:mx-0">
             </div>
 
             <div class="md:w-1/2 md:p-6">
