--- a/templates/main/contact.html.twig
+++ b/templates/main/contact.html.twig
@@ -1,3 +1,4 @@
+{# templates/contact/contact.html.twig #}
 {% extends 'base.html.twig' %}
 
 {% block title %}Kontakt{% endblock %}
@@ -21,25 +22,27 @@
                 </div>
             </div>
 
-            <div class="md:w-1/2 pl-3 md:pl-0"> {# Adjust pl-3 to pl-0 for more left padding #}
-                <form action="#" method="POST" class="p-6 bg-gray-100 rounded-lg">
-                    <h2 class="text-2xl mb-4 text-center">Skontaktuj się ze mną</h2>
-                    <div class="mb-4">
-                        <label for="name" class="block text-gray-700">Imię i nazwisko</label>
-                        <input type="text" id="name" name="name" class="form-input mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-300 focus:ring focus:ring-blue-200 focus:ring-opacity-50">
-                    </div>
-                    <div class="mb-4">
-                        <label for="email" class="block text-gray-700">Adres email</label>
-                        <input type="email" id="email" name="email" class="form-input mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-300 focus:ring focus:ring-blue-200 focus:ring-opacity-50">
-                    </div>
-                    <div class="mb-4">
-                        <label for="message" class="block text-gray-700">Wiadomość</label>
-                        <textarea id="message" name="message" rows="4" class="form-textarea mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-300 focus:ring focus:ring-blue-200 focus:ring-opacity-50"></textarea>
-                    </div>
-                    <div class="flex justify-center">
-                        <button type="submit" class="bg-black text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Wyślij</button>
-                    </div>
-                </form>
+            <div class="md:w-1/2 pl-3 md:pl-0">
+                {{ form_start(form) }}
+                <div class="mb-4">
+                    {{ form_label(form.name) }}
+                    {{ form_widget(form.name, { 'attr': { 'class': 'form-input mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-300 focus:ring focus:ring-blue-200 focus:ring-opacity-50' } }) }}
+                    {{ form_errors(form.name) }}
+                </div>
+                <div class="mb-4">
+                    {{ form_label(form.email) }}
+                    {{ form_widget(form.email, { 'attr': { 'class': 'form-input mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-300 focus:ring focus:ring-blue-200 focus:ring-opacity-50' } }) }}
+                    {{ form_errors(form.email) }}
+                </div>
+                <div class="mb-4">
+                    {{ form_label(form.message) }}
+                    {{ form_widget(form.message, { 'attr': { 'class': 'form-textarea mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-300 focus:ring focus:ring-blue-200 focus:ring-opacity-50' } }) }}
+                    {{ form_errors(form.message) }}
+                </div>
+                <div class="flex justify-center">
+                    <button type="submit" class="bg-black text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Wyślij</button>
+                </div>
+                {{ form_end(form) }}
             </div>
         </div>
     </div>
