--- a/templates/main/contact.html.twig
+++ b/templates/main/contact.html.twig
@@ -22,27 +22,29 @@
                 </div>
             </div>
 
-            <div class="md:w-1/2 pl-3 md:pl-0">
-                {{ form_start(form) }}
-                <div class="mb-4">
-                    {{ form_label(form.name) }}
-                    {{ form_widget(form.name, { 'attr': { 'class': 'form-input mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-300 focus:ring focus:ring-blue-200 focus:ring-opacity-50' } }) }}
-                    {{ form_errors(form.name) }}
+            <div class="md:w-1/3 p-6 bg-gray-100 rounded-lg">
+                <div class="pl-3 md:pl-0">
+                    {{ form_start(form) }}
+                    <div class="mb-4">
+                        {{ form_label(form.name) }}
+                        {{ form_widget(form.name, { 'attr': { 'class': 'form-input mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-300 focus:ring focus:ring-blue-200 focus:ring-opacity-50' } }) }}
+                        {{ form_errors(form.name) }}
+                    </div>
+                    <div class="mb-4">
+                        {{ form_label(form.email) }}
+                        {{ form_widget(form.email, { 'attr': { 'class': 'form-input mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-300 focus:ring focus:ring-blue-200 focus:ring-opacity-50' } }) }}
+                        {{ form_errors(form.email) }}
+                    </div>
+                    <div class="mb-4">
+                        {{ form_label(form.message) }}
+                        {{ form_widget(form.message, { 'attr': { 'class': 'form-textarea mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-300 focus:ring focus:ring-blue-200 focus:ring-opacity-50' } }) }}
+                        {{ form_errors(form.message) }}
+                    </div>
+                    <div class="flex justify-center">
+                        <button type="submit" class="bg-black text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Wyślij</button>
+                    </div>
+                    {{ form_end(form) }}
                 </div>
-                <div class="mb-4">
-                    {{ form_label(form.email) }}
-                    {{ form_widget(form.email, { 'attr': { 'class': 'form-input mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-300 focus:ring focus:ring-blue-200 focus:ring-opacity-50' } }) }}
-                    {{ form_errors(form.email) }}
-                </div>
-                <div class="mb-4">
-                    {{ form_label(form.message) }}
-                    {{ form_widget(form.message, { 'attr': { 'class': 'form-textarea mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-300 focus:ring focus:ring-blue-200 focus:ring-opacity-50' } }) }}
-                    {{ form_errors(form.message) }}
-                </div>
-                <div class="flex justify-center">
-                    <button type="submit" class="bg-black text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Wyślij</button>
-                </div>
-                {{ form_end(form) }}
             </div>
         </div>
     </div>
