--- a/templates/_footer.html.twig
+++ b/templates/_footer.html.twig
@@ -1,4 +1,4 @@
-<footer class="bg-white">
+<footer class="bg-transparent">
     <div class="container mx-auto px-4 py-6">
         <div class="flex flex-wrap justify-between items-center">
             <div class="w-full md:w-1/2 text-center md:text-left mb-4 md:mb-0">
