--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -1,23 +1,23 @@
-<nav  class="w-full space-x-5 bg-white z-10" data-controller="navbar" data-navbar-state-value="false">
+<nav class="w-full space-x-5 bg-transparent z-10 text-gray-400" data-controller="navbar" data-navbar-state-value="false">
     <div class="flex sm:hidden justify-end">
         <button data-action="click->navbar#toggle" class="focus:outline-none">
             <svg class="h-8 w-8 fill-current" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-                <path data-navbar-target="x"    stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" class="hidden" />
+                <path data-navbar-target="x" stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" class="hidden" />
                 <path data-navbar-target="bars" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M4 6h16M4 12h16m-7 6h7"></path>
             </svg>
         </button>
     </div>
     <div class="hidden sm:flex justify-center px-2 pt-2 pb-4 sm:pb-2" data-navbar-target="menu">
-        <a class="active-link block px-4 md:mx-4 py-2 {% if active == 'main' %}active{% endif %}" href="{{ path('app_main') }}">
+        <a class="active-link block px-4 md:mx-4 py-2 text-gray-400" href="{{ path('app_main') }}">
             Strona główna
         </a>
-        <a class="active-link block px-4 md:mx-4 py-2 {% if active == 'portfolio' %}active{% endif %}" href="{{ path('portfolio') }}">
+        <a class="active-link block px-4 md:mx-4 py-2" href="{{ path('portfolio') }}">
             Portfolio
         </a>
-        <a class="active-link block px-4 md:mx-4 py-2 {% if active == 'about' %}active{% endif %}" href="{{ path('about')}}">
+        <a class="active-link block px-4 md:mx-4 py-2" href="{{ path('about')}}">
             O mnie
         </a>
-        <a class="active-link block px-4 md:mx-4 py-2 {% if active == 'contact' %}active{% endif %}" href="{{ path('contact') }}">
+        <a class="active-link block px-4 md:mx-4 py-2" href="{{ path('contact') }}">
             Kontakt
         </a>
     </div>
