--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,11 +14,11 @@
         {% block importmap %}{{ importmap('app') }}{% endblock %}
     {% endblock %}
 </head>
-<body class="text-black" style="background: white;">
+<body class="text-gray-300" style="background: linear-gradient(to bottom, #222222,  #111111 10%);">
 <div class="flex flex-col justify-between min-h-screen relative">
     <div>
-        <header class="h-20 shrink-0 flex flex-col sm:flex-row items-center sm:justify-between py-4 sm:py-0 px-6">
-        {% include '_navbar.html.twig' %}
+        <header class="h-20 shrink-0 flex flex-col sm:flex-row items-center sm:justify-between py-4 sm:py-0 px-6 text-gray-400">
+            {% include '_navbar.html.twig' %}
         </header>
         {% block body %}{% endblock %}
     </div>
