--- a/templates/main/contact.html.twig
+++ b/templates/main/contact.html.twig
@@ -6,8 +6,9 @@
     <div class="container mx-auto p-6">
         <div class="text-center mb-10">
             <h1 class="text-4xl mb-4">Kontakt</h1>
-            <p class="text-lg"><strong>Email:</strong> <a href="mailto:example@email.com" class="text-blue-400 hover:underline">example@email.com</a></p>
-            <p class="text-lg"><strong>Telefon:</strong> <a href="tel:+48123456789" class="text-blue-400 hover:underline">(+48) 123 456 789</a></p>
+            <p class="text-lg"><strong>Email:</strong> <a href="mailto:example@email.com">example@email.com</a></p>
+            <p class="text-lg"><strong>Telefon:</strong> (+48) 123 456 789</p>
+            <p class="text-lg"><strong>Instagram:</strong> <a href="instagram.com/lasek_szymon">instagram.com/lasek_szymon</a></p>
         </div>
 
         <div class="max-w-4xl mx-auto bg-zinc-800 p-10 rounded-xl shadow-xl">
