--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -4,11 +4,13 @@
 
 {% block body %}
   <div class="container mx-auto p-6 min-h-screen">
-
-    <div data-controller="home" class="flex  items-center space-x-4">
-      <img data-target="home.image" src="{{ asset('images/szymon_siedzi_xd.png') }}" alt="Szymon Siedzi" class="w-300 h-300 mr-20"/>
+    <div class="text-center mb-6">
+      <h1 class="text-4xl mb-4">Szymon Lasek</h1>
+    </div>
+    <div class="flex  items-center space-x-4 mb-16">
+      <img src="{{ asset('images/szymon_siedzi_xd.png') }}" alt="Szymon Siedzi" class="w-300 h-300 mr-20"/>
       <div class="flex-col ">
-        <h1 data-target="home.name" class="text-4xl text-white">Szymon Lasek</h1>
+        <h1 class="text-4xl text-white">Szymon Lasek</h1>
         <p>photographer</p>
         <p>top 3 gay in poland</p>
       </div>
