--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -7,18 +7,23 @@
             </svg>
         </button>
     </div>
-    <div class="hidden sm:flex justify-center px-2 pt-2 pb-4 sm:pb-2" data-navbar-target="menu">
-        <a class="active-link block px-4 md:mx-4 py-2 text-gray-400" href="{{ path('app_main') }}">
-            Strona główna
-        </a>
-        <a class="active-link block px-4 md:mx-4 py-2" href="{{ path('portfolio') }}">
-            Portfolio
-        </a>
-        <a class="active-link block px-4 md:mx-4 py-2" href="{{ path('about')}}">
-            O mnie
-        </a>
-        <a class="active-link block px-4 md:mx-4 py-2" href="{{ path('contact') }}">
-            Kontakt
+    <div class="hidden sm:flex justify-between items-center px-2 pt-2 pb-4 sm:pb-2" data-navbar-target="menu">
+        <div class="flex justify-center w-full">
+            <a class="active-link block px-4 md:mx-4 py-2 text-gray-400" href="{{ path('app_main') }}">
+                Strona główna
+            </a>
+            <a class="active-link block px-4 md:mx-4 py-2" href="{{ path('portfolio') }}">
+                Portfolio
+            </a>
+            <a class="active-link block px-4 md:mx-4 py-2" href="{{ path('about')}}">
+                O mnie
+            </a>
+            <a class="active-link block px-4 md:mx-4 py-2" href="{{ path('contact') }}">
+                Kontakt
+            </a>
+        </div>
+        <a href="https://www.instagram.com" target="_blank" class="ml-4 text-gray-400 hover:text-gray-600 transition-all">
+            <i class="fab fa-instagram text-2xl sm:text-4xl hover:text-pink-500"></i>
         </a>
     </div>
 </nav>
