--- a/templates/main/about.html.twig
+++ b/templates/main/about.html.twig
@@ -6,7 +6,6 @@
 
 {% block body %}
     <div class="container mx-auto p-6">
-        <!-- Nagłówek -->
         <div class="text-center mb-10">
             <h1 class="text-4xl mb-4">O mnie</h1>
             <p class="text-lg text-gray-300">
@@ -14,15 +13,12 @@
             </p>
         </div>
 
-        <!-- Sekcja z treścią -->
         <div class="max-w-4xl mx-auto bg-zinc-800 p-10 rounded-xl shadow-xl flex flex-col md:flex-row items-center gap-6">
-            <!-- Zdjęcie -->
             <div class="md:w-1/3 flex-shrink-0">
-                <img src="{{ asset('images/nike_jordan_red_cropped.webp') }}" alt="Twoje zdjęcie"
+                <img src="{{ asset('images/snowbord.jpg') }}" alt="my photo"
                      class="rounded-lg shadow-lg object-cover w-full h-auto">
             </div>
 
-            <!-- Tekst -->
             <div class="md:w-2/3">
                 <p class="text-lg text-gray-300 mb-4 leading-relaxed">
                     Nazywam się Szymon i specjalizuję się w fotografii produktowej. Moje zdjęcia pomagają markom wyróżniać się w tłumie,
